Fixed sport app layout mobile

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <header class="sport_app_header">
-    <h1 class="sport_app_header__title">
-      <a class="sport_app_header__title--link" href="#">Sports</a>
-    </h1>
     <div class="sport_app_article">
+      <a class="sport_app_header__title--link" href="#">
+        <img src="./webroot/img/logo_sports_colour.svg" class="sport_app_header__title--image" alt="Logo">
+      </a>
       <h2 class="sport_app_article__title">
         Get a personalized football experience tailored just for you
       </h2>
