Fixed navigation desktop layout

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 fill="" />
             </svg>
           </a>
-          <p class="list_paragraph">Video highlights for every Premier League and English Football League game</p>
+          <p class="list_paragraph">.Video highlights for every Premier League and English Football League game</p>
         </li>
         <li class="sport_app_container__get_started--list">
           <a href="#" class="icon_link">
@@ -82,7 +82,7 @@
                 fill="" />
             </svg>
           </a>
-          <p class="list_paragraph">Notifications for your teams, including in-game goal clips and Premier League match
+          <p class="list_paragraph">.Notifications for your teams, including in-game goal clips and Premier League match
             highlights for Sky TV
             subscribers with Guardian</p>
         </li>
@@ -95,7 +95,7 @@
             </svg>
 
           </a>
-          <p class="list_paragraph">Brand new video section including dedicated areas for your chosen team, trending
+          <p class="list_paragraph">.Brand new video section including dedicated areas for your chosen team, trending
             video, Premier League,
             Football league and other major leagues</p>
         </li>
@@ -108,7 +108,7 @@
             </svg>
 
           </a>
-          <p class="list_paragraph">Match pages showing live scores, commentary, team line-ups and enhanced match stats
+          <p class="list_paragraph">.Match pages showing live scores, commentary, team line-ups and enhanced match stats
             to keep you up-to-date on
             all the action</p>
         </li>
@@ -121,7 +121,7 @@
             </svg>
 
           </a>
-          <p class="list_paragraph">The new picture in picture video mode means you can watch goals, manager interviews
+          <p class="list_paragraph">.The new picture in picture video mode means you can watch goals, manager interviews
             and more whilst using
             other areas of the app – so you don’t need to miss any of the action</p>
         </li>
@@ -134,7 +134,7 @@
             </svg>
 
           </a>
-          <p class="list_paragraph">The new picture in picture video mode means you can watch goals, manager interviews
+          <p class="list_paragraph">.The new picture in picture video mode means you can watch goals, manager interviews
             and more whilst using
             other areas of the app – so you don’t need to miss any of the action</p>
         </li>
